plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}



repositories {
    mavenCentral()
}



dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
    implementation 'org.json:json:20231013'
    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.3.2'
    implementation group: 'com.cloudinary', name: 'cloudinary', version: '1.0.14'
    implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.37.0'
//    implementation 'org.apache.http components:httpclient:4.0.1'
    implementation group: 'org.eclipse.angus', name: 'angus-mail', version: '2.0.3'
    implementation group: 'com.sendgrid', name: 'sendgrid-java', version: '4.10.2'


    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
